// Copyright 2019 Xcalar, Inc. All rights reserved.
//
// No use, or distribution, of this source code is permitted in any form or
// means without a valid, written license agreement with Xcalar, Inc.
// Please refer to the included "COPYING" file for terms and conditions
// regarding the use and redistribution of this software.
//

syntax = "proto3";

package xcalar.compute.localtypes.ColumnAttribute;

message ColumnAttributeProto {
    string name = 1;
    string type = 2;
    uint32 value_array_idx = 3;
};

message KeyAttributeProto {
    string name = 1;
    string ordering = 2;
    uint32 value_array_idx = 3;
    string type = 4;
};
